--- a/style.css
+++ b/style.css
@@ -1,8 +1,8 @@
 h1{
-    color: aqua;
+    color: rgb(18, 58, 58);
 }
 
 body
 {
-    background-color: brown;
+    background-color: rgb(199, 94, 94);
 }
